# mekena

./: Cargo.toml  flake.nix
.github/workflows/: audit.yml  clippy.yml  msrv.yml  tarpaulin.yml
benches/: messaging.rs
examples/: emergency_shutdown.rs  hello.rs  message_selection.rs  messaging.rs  timing.rs
mekena-macros/: Cargo.toml
mekena-macros/src/: lib.rs
mekena-messaging/: Cargo.toml
mekena-messaging/src/: lib.rs  mailbox.rs  message.rs
mekena-state/: Cargo.toml
mekena-state/src/: lib.rs
mekena-util/: Cargo.toml
mekena-util/src/: shutdown.rs
src/: context.rs  executor.rs  lib.rs  mailbox.rs  message.rs  node.rs  system.rs  timing.rs
src/ecs/: component.rs  entity.rs  query.rs  world.rs
