[package]
name = "mekena"
version = "0.1.0"
edition = "2021"

[package.metadata.nix]
build = true

[dependencies]
async-trait = "0.1.57"
crossbeam = "0.8.2"
flume = "0.10.14"
futures = "0.3.24"
mekena-macros = { version = "0.1.0", path = "mekena-macros" }
miette = "5.3.0"
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "sync", "time"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }
miette = { version = "5.3.0", features = ["fancy"] }

[[bench]]
name = "messaging"
harness = false

[workspace]
members = [ "mekena-macros" ]
