[package]
name = "mekena-macros"
description = "Macros for the mekena scheduling system."
version = "0.1.0"

license = "MIT"
repository = "https://github.com/bobbbay/mekena"

edition = "2021"
rust-version = "1.62"

[lib]
proc-macro = true

[dependencies]
darling = "0.14.1"
proc-macro2 = "1.0.46"
quote = "1.0.21"
syn = "1.0.102"
