[package]
name = "mekena-messaging"
description = "Messaging utilities for the Mekena scheduling system."
version = "0.1.0"

license = "MIT"
repository = "https://github.com/bobbbay/mekena"

edition = "2021"
rust-version = "1.62"

[dependencies]
flume = "0.10.14"
miette = "5.3.0"
thiserror = "1.0.37"
